# INSTALLATIONCALCULATOR

./: .replit  backend_test.py  backend_test_results.json  design_guidelines.json  pyproject.toml  replit.md
.emergent/: emergent.yml
backend/: .env  server.py
frontend/: .env  craco.config.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  UKCalculator.js  index.css
frontend/src/components/ui/: select.jsx
test_reports/: iteration_1.json
