[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "boto3>=1.42.11",
    "certifi>=2025.11.12",
    "cryptography>=46.0.3",
    "email-validator>=2.3.0",
    "fastapi>=0.124.4",
    "jq>=1.10.0",
    "motor>=3.7.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "passlib>=1.7.4",
    "pydantic>=2.12.5",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.5",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "typer>=0.20.0",
    "tzdata>=2025.3",
    "uvicorn>=0.38.0",
]
